--- a/Main/SEToolbox/SEToolbox/Views/WindowLoad.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowLoad.xaml
@@ -24,6 +24,9 @@
     <Window.Cursor>
         <Binding Path="IsBusy" Converter="{StaticResource BusyMouseConverter}"/>
     </Window.Cursor>
+    <Window.InputBindings>
+        <KeyBinding Key="F5" Command="{Binding RefreshCommand}" />
+    </Window.InputBindings>
     <Grid>
         <Grid Margin="8">
             <Grid.ColumnDefinitions>
